css/faq/style.css
body {
  background-color: #CBD1E9;
  font-family: Karla;
  color: #515A5A;
  font-size: 16pt;
  position: relative;
}
header {
  font-family: Comfortaa;
  font-size: 48px;
  padding: 40px;
  background-color: #6e8aff;
  color: white;
  position: relative;
}
.icon-container {
  height: 100px;
  width: 100px;
  background-color: #4963CE;
  position: relative;

  display: inline-block;
}
.rectangle {
  height: 30px;
  width: 90%;
  background-color: #3fb893;
  margin-left: 5%;
  position: absolute;
  bottom: -15px;
  left: 0px;
}
.main-text {

  font-size: 14px;
  background-color: #ECECEC;
  margin-top: 30px;
  padding-bottom: 30px;
  padding-left: 60px;
  padding-right: 60px
}
h1 {
  font-family: Comfortaa;
  font-size: 48px;
  color: #ECECEC;
  position: absolute;
  padding-left: 20px;
  display: inline-block;
}
h2 {
  font-family: Comfortaa;
  font-size: 36px;
  color: #3B403E;
  padding-top: 10px;
  padding-left: 10px;
}

.accordion {
    font-family: Karla;
    font-size: 14px;
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    text-align: left;
    border: none;
    outline: none;
    transition: 0.4s;
}
.active, .accordion:hover {
    background-color: #ccc;
}

.panel {
    font-family: Karla;
    font-size: 14px;
    padding: 0 18px;
    background-color: white;
    max-height: 0;
    display: none;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}

